--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.31.0
 pandas==2.1.0
 plotly==5.18.0
-fpdf==1.7.2
+fpdf2==2.7.8         # ✅ ใช้เวอร์ชันล่าสุดที่รองรับ Unicode
 streamlit-extras==0.3.5
 streamlit-plotly-events==0.0.6
 openpyxl==3.1.2
